# media-ingestor

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
media_ingestor/: __init__.py  archive.py  cli.py  config.py  ingest.py  probe.py
tests/: test_ingest.py  test_probe.py
