[project]
name = "media-ingestor"
version = "0.1.0"
description = "Frictionless family-media (photo + video) ingestion pipeline"
requires-python = ">=3.11"
dependencies = []  # ingest core is stdlib-only

[project.optional-dependencies]
photo = ["Pillow>=10"]          # EXIF capture dates for stills
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
media-ingest = "media_ingestor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_ingestor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # long lines are fine in comments/log strings
